fix bugs( Top menu Please align with "Se connecter" https://www.screencast.com/t/w0t9NDJzC
Maine menu
Align vertical line with the top of the letters https://www.screencast.com/t/4QaAHmNS
Put this line 1 pixel instead of 2 px https://www.screencast.com/t/tEPGMAAqo
Align in height and same space between the buttons https://www.screencast.com/t/yiTUoDLp8WF. Good example: www.mec.ca https://www.screencast.com/t/uudwGKiJrnAh

Category page
Write "- Moins" instead of "- Less" https://www.screencast.com/t/FMJy08ZV3p)

Added text filter

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -6,11 +6,19 @@
     .parcourir-par-catégories .slick-prev, .parcourir-par-catégories .slick-next {
         top: 32% !important;
     }
+
 }
 
 @media (max-width: 1866px) {
+    .header-menu-main {
+        padding: .5rem 0 0;
+    }
+
+    .header-menu-main .nav{
+        width: 100%;
+    }
     .header-menu-main .nav-item {
-        margin: 0 1.2%;
+        margin: 0 0.9%;
     }
 
     .header-slider-caption-wrapper {
@@ -20,6 +28,8 @@
     .parcourir-par-catégories .slick-prev, .parcourir-par-catégories .slick-next {
         top: 30% !important;
     }
+
+
 
 }
 
@@ -42,6 +52,11 @@
 
     .parcourir-par-catégories .slick-prev, .parcourir-par-catégories .slick-next {
         top: 32% !important;
+    }
+
+    .header-menu-main .nav-item {
+        margin: 0 0.8%;
+        padding: 0.8rem 1rem;
     }
 }
 
@@ -84,6 +99,20 @@
     }
 }
 
+@media (max-width: 1615px) {
+
+    .header-menu-main .nav-item {
+        margin: 0 0.5%;
+    }
+}
+
+@media (max-width: 1560px) {
+
+    .header-menu-main .nav-item {
+        margin: 0 0.3%;
+    }
+}
+
 @media (max-width: 1480px) {
     /*CATEGORY PAGE*/
     .category-header-top-caption {
@@ -91,7 +120,7 @@
     }
 
     .header-menu-main .nav-item {
-        margin: 0 0.5%;
+        margin: 0 0.1%;
     }
 
     .btn-icons {
@@ -106,6 +135,19 @@
         top: 26% !important;
     }
 
+    .sous-menu-main {
+        margin-left: 1%;
+    }
+
+    .sous-menu-main-items {
+        width: 320px;
+    }
+    .sous-submenu .col-3{
+        min-width: 340px!important;
+    }
+    .sous-menu-btn button, .sous-menu-btn-main-menu button{
+        width: 300px;
+    }
 }
 
 @media (max-width: 1400px) {
@@ -127,14 +169,6 @@
 
     .copyright {
         margin: 0 auto;
-    }
-
-    .sous-menu-main-items {
-        width: 25%;
-    }
-
-    .sous-menu-btn-main-menu {
-        width: 24%;
     }
 
     .photo-section-caption-top, .photo-section-caption-bottom {
@@ -165,7 +199,7 @@
     }
 
     .header-menu-main .nav-item {
-        margin: 0 0.5%;
+        margin: 0;
     }
 
     .btn-icons {
@@ -176,19 +210,23 @@
         width: 90%;
     }
 
+    .sous-menu{
+        margin-left: 0;
+    }
+
 }
 
 @media (max-width: 1300px) {
     .parcourir-par-catégories .slick-track {
         height: 200px;
     }
-
+    .header-menu-main .nav-item {
+        margin: 0;
+        padding: 0.7rem .8rem;
+    }
 }
 
 @media (max-width: 1260px) {
-    .header-menu-main .nav-item {
-        margin: 0 0.2%;
-    }
 
     .messenger-btn {
         top: 2rem;
@@ -203,11 +241,39 @@
         margin-left: 5px;
     }
 
+    .sous-menu-main-items {
+        width: 280px;
+    }
+    .sous-submenu .col-3{
+        min-width: 300px!important;
+    }
+    .sous-menu-btn button, .sous-menu-btn-main-menu button{
+        width: 260px;
+    }
+
+    .header-menu-main .nav-item {
+        padding: 0.6rem .6rem;
+    }
 }
 
 @media (max-width: 1210px) {
     .sous-submenu {
         width: 1100px;
+    }
+
+    .sous-menu-main-items {
+        width: 260px;
+    }
+    .sous-submenu .col-3{
+        min-width: 260px!important;
+    }
+    .sous-menu-btn button, .sous-menu-btn-main-menu button{
+        width: 240px;
+        font-size: 13px;
+    }
+
+    .sous-menu-main {
+        margin-left: 5px;
     }
 
     /*CATEGORY PAGE*/
@@ -218,15 +284,16 @@
     div.producteur-de-la-semaine {
         width: 80%;
     }
+
+    .header-menu-main .nav-item {
+        padding: 0.6rem .5rem;
+    }
 }
 
 @media (max-width: 1150px) {
-    .header-menu-main .nav-item {
-        margin: 0 0.1%;
-    }
 
     .header-menu-main .nav-item {
-        padding: 0.4rem;
+        padding: 0.6rem .48rem;
     }
 
     .header-menu-main .nav-link {
@@ -263,6 +330,17 @@
 
     .parcourir-par-catégories .slick-prev, .parcourir-par-catégories .slick-next {
         top: 25% !important;
+    }
+
+    .sous-menu-main-items {
+        width: 240px;
+    }
+    .sous-submenu .col-3{
+        min-width: 240px!important;
+    }
+    .sous-menu-btn button, .sous-menu-btn-main-menu button{
+        width: 220px;
+        font-size: 11px;
     }
 }
 
@@ -364,6 +442,11 @@
 
     .produit-en-vedette .slick-prev, .produit-a-proximite .slick-prev, .produit-en-vedette .slick-next, .produit-a-proximite .slick-next {
         top: 26% !important;
+    }
+
+    .btn-icons {
+        margin-left: 5px;
+        margin-top: 5px;
     }
 }
 
@@ -665,6 +748,10 @@
         height: 20px;
         width: 20px;
         top: 10px;
+    }
+
+    .btn-icons {
+        margin-top: 0;
     }
 
     .btn-icons-cart-count {
